# heap-seance

./: .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GLAMA.md  LICENSE-APACHE  LICENSE-MIT  README.md  glama.json  pyproject.toml
.claude/commands/: leak-deep.md  leak-scan.md
examples/java-scenarios/: run_scenario.sh
examples/java-scenarios/src/main/java/com/example/leaks/: BoundedCacheScenario.java  BurstAllocationScenario.java  LeakMapScenario.java
scripts/: check_prereqs.bat  check_prereqs.sh  run_leak_workflow.sh
src/heap_seance_mcp/: __init__.py  heuristics.py  parsers.py  results.py  server.py  shell_tools.py  tools.py  workflow.py
src/java_leak_hunter_mcp/: __init__.py  parsers.py  server.py  tools.py  workflow.py
tests/: test_heuristics.py  test_parsers.py
