[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "java-leak-hunter-mcp"
version = "0.1.0"
description = "MCP server and workflow helpers for Java memory leak detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0"
]

[project.scripts]
java-leak-hunter-mcp = "java_leak_hunter_mcp.server:main"
leak-workflow = "java_leak_hunter_mcp.workflow:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
