[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heap-seance-mcp"
version = "1.0.0"
description = "MCP server and workflow helpers for Java memory leak detection"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0"
]

[project.scripts]
heap-seance-mcp = "heap_seance_mcp.server:main"
heap-seance = "heap_seance_mcp.workflow:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
